se añade editar clientes

--- a/src/app/clientes/clientes-editar/clientes-editar.component.html
+++ b/src/app/clientes/clientes-editar/clientes-editar.component.html
@@ -31,7 +31,7 @@
               <div class="row">
                 <div class="col-md-12">
 
-                  <button mat-raised-button class="btn btn-fill btn-primary mx-2" (click)='modificar()' >Modificar</button>
+                  <button mat-raised-button class="btn btn-fill btn-primary mx-2" (click)='modificar(cliente)' >Modificar</button>
                   <button mat-raised-button class="btn btn-fill btn-secondary mx-2" [routerLink]="['/clientes']">Cancelar</button>
                 </div>
               </div>
