cambios menores en los labels

--- a/src/app/producto/producto-agregar/producto-agregar.component.html
+++ b/src/app/producto/producto-agregar/producto-agregar.component.html
@@ -15,7 +15,7 @@
                   <input [(ngModel)]="nombre"  matInput placeholder="Nombre" type="text" >
                 </mat-form-field>
                 <mat-form-field class="example-full-width">
-                  <input [(ngModel)]="precioVenta" matInput placeholder="Precion de Venta" type="number" >
+                  <input [(ngModel)]="precioVenta" matInput placeholder="Precio de Venta" type="number" >
                 </mat-form-field>
                 <mat-form-field class="example-full-width">
                   <input [(ngModel)]="existencia" matInput placeholder="Existencia" type="number" >
