se arregla bug del ruc al editar cliente y mejoras estéticas en clientes

--- a/src/app/clientes/clientes-agregar/clientes-agregar.component.html
+++ b/src/app/clientes/clientes-agregar/clientes-agregar.component.html
@@ -13,7 +13,7 @@
                 <!-- <div class="row"> -->
                   <div class="row-sm-6">
                     <mat-form-field class="example-full-width">
-                      <input matInput name="ruc" placeholder="Número de R.U.C." type="number" [(ngModel)]="cliente.ruc">
+                      <input matInput name="ruc" placeholder="Número de R.U.C." type="text" [(ngModel)]="cliente.ruc">
                     </mat-form-field>
                   </div>
                   <div class="row-sm-6">
