--- a/src/app/clientes/clientes-editar/clientes-editar.component.html
+++ b/src/app/clientes/clientes-editar/clientes-editar.component.html
@@ -12,7 +12,7 @@
               <form method="#" action="#" >
                 <div class="row-sm-6">
                     <mat-form-field class="example-full-width">
-                      <input matInput name="ruc" placeholder="Número de R.U.C." type="number" [(ngModel)]="cliente.ruc">
+                      <input matInput name="ruc" placeholder="Número de R.U.C." type="text" [(ngModel)]="cliente.ruc">
                     </mat-form-field>
                   </div>
                   <div class="row-sm-6">
