--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -7,7 +7,7 @@
             </div>
           </a>
             <a href="https://www.creative-tim.com" class="simple-text logo-normal">
-              Creative Tim
+              Ventas Software
             </a>
         </div>
 
@@ -21,7 +21,7 @@
                 <div class="user-info">
                     <a data-toggle="collapse" href="#collapseExample" class="collapsed">
                         <span>
-                            Tania Andrew
+                            Tania Morales
                             <b class="caret"></b>
                         </span>
                     </a>
@@ -30,19 +30,19 @@
                             <li class="nav-item">
                                 <a href="javascript:void(0)" class="nav-link">
                                     <span class="sidebar-mini">MP</span>
-                                    <span class="sidebar-normal">My Profile</span>
+                                    <span class="sidebar-normal">Mi Perfil</span>
                                 </a>
                             </li>
                             <li class="nav-item">
                                 <a href="javascript:void(0)" class="nav-link">
                                     <span class="sidebar-mini">EP</span>
-                                    <span class="sidebar-normal">Edit Profile</span>
+                                    <span class="sidebar-normal">Editar Perfil</span>
                                 </a>
                             </li>
                             <li class="nav-item">
                                 <a href="javascript:void(0)" class="nav-link">
-                                    <span class="sidebar-mini">S</span>
-                                    <span class="sidebar-normal">Settings</span>
+                                    <span class="sidebar-mini">C</span>
+                                    <span class="sidebar-normal">Configuraciones</span>
                                 </a>
                             </li>
                         </ul>
@@ -52,7 +52,7 @@
             <div *ngIf="isMobileMenu()">
               <form class="navbar-form">
                 <span class="bmd-form-group"><div class="input-group no-border">
-                  <input type="text" value="" class="form-control" placeholder="Search...">
+                  <input type="text" value="" class="form-control" placeholder="`Buscar ...">
                   <button mat-raised-button type="submit" class="btn btn-white btn-round btn-just-icon">
                     <i class="material-icons">search</i>
                     <div class="ripple-container"></div>
@@ -71,24 +71,22 @@
                 <li class="nav-item dropdown">
                   <a class="nav-link" href="#pablo" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <i class="material-icons">notifications</i>
-                    <span class="notification">5</span>
+                    <span class="notification">3</span>
                     <p>
-                      <span class="d-lg-none d-md-block">Some Actions</span>
+                      <span class="d-lg-none d-md-block">Acciones</span>
                     </p>
                   </a>
                   <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="#">Mike John responded to your email</a>
-                    <a class="dropdown-item" href="#">You have 5 new tasks</a>
-                    <a class="dropdown-item" href="#">You're now friend with Andrew</a>
-                    <a class="dropdown-item" href="#">Another Notification</a>
-                    <a class="dropdown-item" href="#">Another One</a>
+                    <a class="dropdown-item" href="#">Actualice su foto de perfil</a>
+                    <a class="dropdown-item" href="#">Nuevos productos en 2 días</a>
+                    <a class="dropdown-item" href="#">María desea comprar hoy</a>
                   </div>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#pablo">
                     <i class="material-icons">person</i>
                     <p>
-                      <span class="d-lg-none d-md-block">Account</span>
+                      <span class="d-lg-none d-md-block">Cuenta</span>
                     </p>
                   </a>
                 </li>
@@ -118,12 +116,6 @@
                             </li>
                         </ul>
                     </div>
-                </li>
-                <li class="nav-item">
-                    <a href="http://md-pro-angular.creative-tim.com/documentation/tutorial?ref=md-pro-archive" class="nav-link">
-                        <i class="material-icons">school</i>
-                        <p>Documentation</p>
-                    </a>
                 </li>
             </ul>
 
