--- a/src/app/ventas/ventas.component.html
+++ b/src/app/ventas/ventas.component.html
@@ -33,9 +33,9 @@
                     </mat-form-field>
                   </div>
                 </div>
-                <div class="row">
+                <div class="row px-3">
                     <table class="table table-bordered">
-                        <thead>
+                        <thead class="text-primary">
                             <tr>
                                 <th>Producto</th>
                                 <th>Cantidad</th>
@@ -66,7 +66,7 @@
                                   </mat-select>
                                 </td>
                                 <td>
-                                  <input matInput name="cantidad" placeholder="Cantidad" type="number" (input)="cantidadHandler($event)">
+                                  <input matInput name="cantidad" placeholder="Cantidad" type="number" (input)="cantidadHandler($event)" style="max-width:80px;">
                                 </td>
                                 <td>
                                   {{ detalle.total }}
